# humanfilt

./: .gitignore  LICENSE  README.md  bootstrap_humanfilt.sh  pyproject.toml
humanfilt/: cli.py  downloader.py  pipeline_rnaseq.py  pipeline_wgs.py  rnaseq_pipeline.py  utils.py
humanfilt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
recipe/: build.sh  meta.yaml
recipes/: meta.yaml
recipes/humanfilt/: meta.yaml
tests/: test_cli.sh
