[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanfilt"
version = "1.0.0"
description = "WGS decontamination with first-run Zenodo download (GRCh38/T2T/HPRC/GENCODE/UniVec + Kraken2)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Mariia Frolova"}]

[project.scripts]
humanfilt = "humanfilt.cli:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["humanfilt*"] } }

